fixes of a while ago, trying to improve velocity support